[package]
name = "saddle-vehicle-ground-vehicle"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/julien-blanchon/saddle-vehicle-ground-vehicle"
license = "MIT-0"
description = "Reusable ground vehicle controller for Bevy with suspension, steering, grip, and crate-local lab verification"

[dependencies]
bevy = "0.18"
avian3d = { version = "0.6", default-features = false, features = ["3d", "f32", "parry-f32", "default-collider", "collider-from-mesh", "debug-plugin", "bevy_scene", "bevy_picking", "xpbd_joints"] }

[workspace]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
