[package]
name = "ground_vehicle_example_driving_demo"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
ground_vehicle = { workspace = true }
ground_vehicle_example_support = { path = "../support" }
saddle-pane = { workspace = true }
saddle-vehicle-flight = { git = "https://github.com/julien-blanchon/saddle-vehicle-flight" }

[lints]
workspace = true
