[package]
name = "ground_vehicle_example_driving_demo"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
e2e = ["dep:saddle-bevy-e2e"]

[dependencies]
avian3d = { workspace = true }
bevy = { workspace = true }
ground_vehicle = { workspace = true }
ground_vehicle_example_support = { path = "../support" }
saddle-bevy-e2e = { git = "https://github.com/julien-blanchon/saddle-bevy-e2e", features = ["json"], optional = true }
saddle-pane = { workspace = true }

[lints]
workspace = true
