[package]
name = "ground_vehicle_lab"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["dev"]
dev = ["dep:bevy_brp_extras"]
e2e = ["dep:bevy_e2e"]

[dependencies]
avian3d = { workspace = true }
bevy = { version = "0.18", features = ["bevy_remote"] }
bevy_enhanced_input = { workspace = true }
bevy_brp_extras = { version = "0.19", optional = true }
bevy_e2e = { path = "../../../../../external_crates/bevy_e2e", features = ["json"], optional = true }
ground_vehicle = { workspace = true }
ground_vehicle_example_support = { path = "../support" }

[lints]
workspace = true
