[package]
name = "ground_vehicle_lab"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
dev = ["dep:bevy_brp_extras", "bevy/bevy_remote"]
e2e = ["dep:saddle-bevy-e2e"]

[dependencies]
avian3d = { workspace = true }
bevy = { version = "0.18" }
bevy_enhanced_input = { workspace = true }
bevy_brp_extras = { version = "0.19", optional = true }
saddle-bevy-e2e = { git = "https://github.com/julien-blanchon/saddle-bevy-e2e", features = ["json"], optional = true }
ground_vehicle = { workspace = true }
ground_vehicle_example_support = { path = "../support" }
saddle-pane = { workspace = true }

[lints]
workspace = true
