[package]
name = "ground_vehicle_example_sport_bike"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
avian3d = { workspace = true }
bevy_enhanced_input = { workspace = true }
ground_vehicle = { workspace = true }
ground_vehicle_example_support = { path = "../support" }
saddle-pane = { workspace = true }

[lints]
workspace = true
